solve some sonar