@@ -3,7 +3,6 @@ package com.example.demonew.service;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -46,7 +45,7 @@ public class ItemService {
 	    return Data.getDataStore().entrySet().stream()
 	    		.filter(entry -> entry.getValue().contains("demo"))
                 .map(entry -> new Item(entry.getKey(), entry.getValue()))
-                .collect(Collectors.toList());
+                .toList();
 	}
 
     public Optional<Item> updateItem(Long id, String newValue) {
